force-app/main/default/objects/Document__c/fields/Link_File__c.field-meta.xml
<CustomField>
    <fullName>Link_File__c</fullName>
    <label>Link / File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>