force-app/main/default/objects/Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPQ Quotation</fullName>
            </value>
            <value>
                <fullName>Proposal / SOW</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Proof of Payment</fullName>
            </value>
            <value>
                <fullName>Customer Tax Certificate</fullName>
            </value>
            <value>
                <fullName>Vendor Commit Contract</fullName>
            </value>
            <value>
                <fullName>Customer Commit Contract</fullName>
            </value>
            <value>
                <fullName>Other Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>